--- a/pages/page7/page.css
+++ b/pages/page7/page.css
@@ -8,16 +8,41 @@
 }
 
 .container1 {
-    grid-row-gap: 10px;
-    grid-column-gap: 10px;
+    gap: 10px;
 }
 
 .container2 {
-    grid-gap: 20px;
+    gap: 10px;
+    grid-auto-flow: column;
 }
 
 .container3 {
-    gap: 30px;
+    gap: 10px;
+}
+
+.container3 .item1, .container3 .item2{
+  grid-column-start: 1;
+  grid-column-end: 3;  
+}
+
+.container4 {
+    gap: 10px;
+    grid-auto-flow: row dense;
+}
+
+.container4 .item1, .container4 .item2{
+  grid-column-start: 1;
+  grid-column-end: 3;  
+}
+
+.container5 {
+    gap: 10px;
+    grid-auto-flow: column dense;
+}
+
+.container5 .item1, .container5 .item2{
+  grid-column-start: 1;
+  grid-column-end: 3;  
 }
 
 .container .item {
