--- a/pages/page2/page.css
+++ b/pages/page2/page.css
@@ -9,6 +9,10 @@
     grid-column-gap: 5px;
 }
 
+.container2 {
+    display: inline-grid;
+}
+
 .container .item {
     font-size: 3em;
     color: #eee;
