--- a/pages/page12/page.css
+++ b/pages/page12/page.css
@@ -5,50 +5,34 @@
     grid-template-rows: repeat(3, 100px);
     justify-content: center;
     align-content: center;
-}
-
-.container1 {
     gap: 10px;
 }
 
-.container2 {
-    gap: 10px;
-    justify-content: start;
+.container1 .item1 {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
 }
 
-.container3 {
-    gap: 10px;
-    justify-content: end;
+.container2 .item1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
 
-.container4 {
-    gap: 10px;
-    justify-content: center;
+.container3 .item1 {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
 }
 
-.container5 {
-    gap: 10px;
-    justify-content: stretch;
+.container4 .item1 {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
 }
 
-.container6 {
-    gap: 10px;
-    justify-content: space-around;
-}
-
-.container7 {
-    gap: 10px;
-    justify-content: space-between;
-}
-
-.container8 {
-    gap: 10px;
-    justify-content: space-evenly;
-}
-
-.container9 {
-    gap: 10px;
-    place-content: space-around space-evenly;
+.container5 .item1 {
+    grid-column: 1;
+    grid-row: 1;
 }
 
 .container .item {
