--- a/pages/page13/page.css
+++ b/pages/page13/page.css
@@ -5,50 +5,19 @@
     grid-template-rows: repeat(3, 100px);
     justify-content: center;
     align-content: center;
+    gap: 10px;
 }
 
 .container1 {
-    gap: 10px;
+    grid-template-areas: 'a b c' 'd e f' 'g h i';
 }
 
-.container2 {
-    gap: 10px;
-    justify-content: start;
+.container1 .item1 {
+    grid-area: e;
 }
 
-.container3 {
-    gap: 10px;
-    justify-content: end;
-}
-
-.container4 {
-    gap: 10px;
-    justify-content: center;
-}
-
-.container5 {
-    gap: 10px;
-    justify-content: stretch;
-}
-
-.container6 {
-    gap: 10px;
-    justify-content: space-around;
-}
-
-.container7 {
-    gap: 10px;
-    justify-content: space-between;
-}
-
-.container8 {
-    gap: 10px;
-    justify-content: space-evenly;
-}
-
-.container9 {
-    gap: 10px;
-    place-content: space-around space-evenly;
+.container2 .item1 {
+    grid-area: 1 / 1 / 3 / 3;
 }
 
 .container .item {
